<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="Menu"
        android:enabled="true"
        android:shortcutShortLabel="@string/short_launch_Menu"
        android:shortcutLongLabel="@string/long_launch_Menu"
        android:shortcutDisabledMessage="@string/disabled"
        >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.tetris.saar.tetris"
            android:targetClass="com.tetris.saar.tetris.MainMenu"
            />
    </shortcut>
    <shortcut
        android:shortcutId="gameActivity"
        android:enabled="true"
        android:shortcutShortLabel="@string/short_launch_game"
        android:shortcutLongLabel="@string/long_launch_game"
        android:shortcutDisabledMessage="@string/disabled"
        >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.tetris.saar.tetris"
            android:targetClass="com.tetris.saar.tetris.GameActivity"
            />
    </shortcut>
    <shortcut
        android:shortcutId="scoreboard"
        android:enabled="true"
        android:shortcutShortLabel="@string/short_launch_Scoreboard"
        android:shortcutLongLabel="@string/long_launch_Scoreboard"
        android:shortcutDisabledMessage="@string/disabled"
        >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.tetris.saar.tetris"
            android:targetClass="com.tetris.saar.tetris.Scoreboard"
            />
    </shortcut>
    <shortcut
        android:shortcutId="HowToPlay"
        android:enabled="true"
        android:shortcutShortLabel="@string/short_launch_HowToPlay"
        android:shortcutLongLabel="@string/long_launch_HowToPlay"
        android:shortcutDisabledMessage="@string/disabled"
        >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.tetris.saar.tetris"
            android:targetClass="com.tetris.saar.tetris.HowToPlay"
            />
    </shortcut>
</shortcuts>